update rest swagger documentaiton
