# internal/identity/user.go
@@ -3,14 +3,14 @@ package identity
 import "github.com/sirupsen/logrus"
 
 // your identity information
-var YourUserInformation InformationUser
+var YourUserInformation InformationUserDTO
 // store all active users (including YourUserInformation)
-var Users []InformationUser
+var Users []InformationUserDTO
 
 /*
 adds a identity to your identity pool
  */
-func AddUser(userInformation InformationUser) {
+func AddUser(userInformation InformationUserDTO) {
 	Users = append(Users, userInformation)
 	logrus.Info("[service.AddUser] identity added " + userInformation.UserId)
 }
@@ -18,21 +18,27 @@ func AddUser(userInformation InformationUser) {
 /*
 deletes a identity from your identity pool
  */
-func DeleteUser(userInformation InformationUser) {
+func DeleteUser(userInformation InformationUserDTO) bool {
 	for i, user := range Users {
 		if user.UserId == userInformation.UserId {
 			// delete identity from the list
 			Users[i] = Users[len(Users)-1]
 			Users = Users[:len(Users)-1]
-			break
+			logrus.Info("[service.DeleteUser] identity deleted " + userInformation.UserId)
+			return true
 		}
 	}
-	logrus.Info("[service.DeleteUser] identity deleted " + userInformation.UserId)
+	logrus.Warning("[service.DeleteUser] identity could not be found and deleted " + userInformation.UserId)
+	return false
 }
 
-/* STRUCT */
 // identity info struct
-type InformationUser struct {
+// swagger:model
+type InformationUserDTO struct {
+	// user identification which should be unique
+	// required: true
 	UserId   string `json:"userId"`
+	// user endpoint to send http request
+	// required: true
 	Endpoint string `json:"endpoint"`
 }
